
[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "pytest-dv"
version = "0.0.1"
dependencies = [
    'dv-flow-mgr',
    'pytest'
]
authors = [
    {name = "Matthew Ballance", email = "matt.ballance@gmail.com"},
]
description = "DV Flow Manager is a build system for silicon design"
license = {file = "LICENSE" }

#[project.scripts]
#dfm = "dv_flow.mgr.__main__:main"

#[tool.setuptools.package-data]
#"dv_flow.mgr" = ['share/*']

