
[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "pytest-dfm"
version = "0.0.1"
dependencies = [
    'dv-flow-mgr',
    'pytest'
]
authors = [
    {name = "Matthew Ballance", email = "matt.ballance@gmail.com"},
]
description = "pytest-dfm provides a pytest integration for DV Flow Manager, a build system for silicon design"
license = {file = "LICENSE" }

#[project.scripts]
#dfm = "dv_flow.mgr.__main__:main"

#[tool.setuptools.package-data]
#"dv_flow.mgr" = ['share/*']

